<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- TODO: つくった String リソースを利用した TextView を配置していく -->
    <TextView
        android:id="@+id/yokomark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yokomark" />
    <TextView
        android:id="@+id/analplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yokomark"
        android:text="@string/analplay" />
    <TextView
        android:id="@+id/nuwaaa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/analplay"
        android:text="@string/nuwaaa" />
    <TextView
        android:id="@+id/chinko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nuwaaa"
        android:text="@string/chinko" />
    <TextView
        android:id="@+id/unk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chinko"
        android:text="@string/unk" />
    
</RelativeLayout>